# Copyright © 2025 Luca Valsassina
# SPDX-License-Identifier: MIT

find_package(Doxygen 1 REQUIRED)

set(BPL_DOXYGEN_OUTPUT_DIR ${CMAKE_CURRENT_BINARY_DIR}/doxygen)
set(BPL_DOXYGEN_HTML_OUTPUT_DIR ${BPL_DOXYGEN_OUTPUT_DIR}/html)
set(BPL_DOXYGEN_INDEX_FILE ${BPL_DOXYGEN_HTML_OUTPUT_DIR}/index.html)

set(BPL_DOXYFILE_IN ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in)
set(BPL_DOXYFILE_OUT ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)
configure_file(${BPL_DOXYFILE_IN} ${BPL_DOXYFILE_OUT} @ONLY)

add_custom_command(
	OUTPUT ${BPL_DOXYGEN_INDEX_FILE}
	COMMAND ${DOXYGEN_EXECUTABLE} ${BPL_DOXYFILE_OUT}
	MAIN_DEPENDENCY ${BPL_DOXYFILE_IN} ${BPL_DOXYFILE_OUT}
	DEPENDS bpl ${BPL_DOXYFILE_OUT}
	COMMENT "[bpl/docs] Generating Doxygen HTML..."
)
add_custom_target(bpl.docs ALL DEPENDS ${BPL_DOXYGEN_INDEX_FILE})
